// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Results component renders correctly 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Tiles
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1418
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 32
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 49
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Ventilation
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 2
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Accessories
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 11
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 15
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 281
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1312
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 7
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="Alert ColorPair ColorPair--alert"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="Alert ColorPair ColorPair--alabaster"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form form"
    >
      <h4
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h4"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography MuiTypography-body1"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-3"
                >
                  <span>
                    Your name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-3"
                >
                  <span>
                    Your email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-8"
                    data-indeterminate="false"
                    name="gdpr_1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-8"
                    data-indeterminate="false"
                    name="gdpr_2"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-9 MuiButton-contained buttonStyles-contained-11 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-12"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with debugging mode on 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Tiles
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1418
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 32
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 49
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Ventilation
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 2
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Accessories
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 11
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 15
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 281
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1312
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 7
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="Alert ColorPair ColorPair--alert"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="Alert ColorPair ColorPair--alabaster"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form form"
    >
      <h4
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h4"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography MuiTypography-body1"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-31"
                >
                  <span>
                    Your name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-31"
                >
                  <span>
                    Your email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-36"
                    data-indeterminate="false"
                    name="gdpr_1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-33 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-36"
                    data-indeterminate="false"
                    name="gdpr_2"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-37 MuiButton-contained buttonStyles-contained-39 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-40"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      class="FieldContainer"
    >
      <h3
        class="MuiTypography-root Typography MuiTypography-h3"
      >
        Measurements (showing because debugging mode is ON)
      </h3>
      <h4
        class="MuiTypography-root Typography MuiTypography-h4"
      >
        Lines
      </h4>
      <ul>
        <li>
          <b>
            ridge
            :
          </b>
           
          1500.00
        </li>
        <li>
          <b>
            eave
            :
          </b>
           
          900.00 | 900.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            leftVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
        <li>
          <b>
            rightVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
      </ul>
      <h4
        class="MuiTypography-root Typography MuiTypography-h4"
      >
        Faces
      </h4>
      <ul>
        <li>
          <b>
            face 
            1
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            face 
            2
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with default ridge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Tiles
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1418
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 32
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 49
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Ventilation
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 2
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Accessories
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 11
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 15
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 281
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1312
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 7
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="Alert ColorPair ColorPair--alert"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="Alert ColorPair ColorPair--alabaster"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form form"
    >
      <h4
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h4"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography MuiTypography-body1"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-115"
                >
                  <span>
                    Your name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-115"
                >
                  <span>
                    Your email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-117 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-120"
                    data-indeterminate="false"
                    name="gdpr_1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-117 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-120"
                    data-indeterminate="false"
                    name="gdpr_2"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-contained buttonStyles-contained-123 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-124"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with main tile as verge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Tiles
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1418
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 32
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 49
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Ventilation
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 2
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Accessories
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 11
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 15
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 281
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1312
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 7
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="Alert ColorPair ColorPair--alert"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="Alert ColorPair ColorPair--alabaster"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form form"
    >
      <h4
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h4"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography MuiTypography-body1"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87"
                >
                  <span>
                    Your name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-85 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-87"
                >
                  <span>
                    Your email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-89 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-92"
                    data-indeterminate="false"
                    name="gdpr_1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-89 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-92"
                    data-indeterminate="false"
                    name="gdpr_2"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-93 MuiButton-contained buttonStyles-contained-95 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-96"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with no guttering 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Tiles
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1418
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 32
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 49
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Ventilation
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 2
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography MuiTypography-h6"
        >
          Accessories
        </h6>
      </div>
      <p>
        {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 105
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 97
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 281
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1312
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 4
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 7
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
      </p>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="Alert ColorPair ColorPair--alert"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              Quantities update
            </h5>
            Changing the quantities may affect the accuracy of the estimates.
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="Alert ColorPair ColorPair--alabaster"
      >
        <div
          class="actions"
        />
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root title Typography MuiTypography-h5"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              Need to know
            </h5>
            We’ve added a wastage contingency of: 5% into this material calculation.
          </div>
        </div>
      </div>
    </div>
    <form
      class="Form form"
    >
      <h4
        class="MuiTypography-root title Typography Typography--underline MuiTypography-h4"
      >
        Print this list
      </h4>
      <div
        class="MuiGrid-root help MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <p
            class="MuiTypography-root Typography MuiTypography-body1"
          >
            To access your list of materials in pdf format that can be saved, shared or printed please supply your name and email address
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root fieldsContainer MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="name"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-57 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-59"
                >
                  <span>
                    Your name
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              Your email address
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                name="email"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-57 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-59"
                >
                  <span>
                    Your email address
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gdprContainer MuiGrid-container MuiGrid-spacing-xs-6 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-64"
                    data-indeterminate="false"
                    name="gdpr_1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-6"
        >
          <div
            class="MuiFormControl-root Checkbox"
          >
            <label
              class="MuiFormControlLabel-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-64"
                    data-indeterminate="false"
                    name="gdpr_2"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
              </span>
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-65 MuiButton-contained buttonStyles-contained-67 submit MuiButton-containedPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-68"
            >
              Print this list
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component sends email address and downloads PDF ignoring unavailable images: Email address details 1`] = `
Array [
  Array [
    Object {
      "email": "test@test.test",
      "gdpr_1": true,
      "gdpr_2": true,
      "name": "Test Test",
    },
  ],
]
`;

exports[`PitchedRoofCalculator Results component sends email address and downloads PDF ignoring unavailable images: PDF props 1`] = `
Array [
  Array [
    Object {
      "area": "151.51",
      "getMicroCopy": [Function],
      "results": Object {
        "accessories": Array [
          Object {
            "category": "accessories",
            "description": "Zanda_Protector_verge metal flush black left start",
            "externalProductCode": "86035763",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 3,
          },
          Object {
            "category": "accessories",
            "description": "Zanda_Protector_verge metal flush black left",
            "externalProductCode": "86035761",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 105,
          },
          Object {
            "category": "accessories",
            "description": "Zanda_Protector_verge metal flush black right start",
            "externalProductCode": "86035764",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 3,
          },
          Object {
            "category": "accessories",
            "description": "Zanda_Protector_verge metal flush black right",
            "externalProductCode": "86035762",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 105,
          },
          Object {
            "category": "accessories",
            "description": "Test Guttering Grey",
            "externalProductCode": "4391",
            "image": "",
            "packSize": "-",
            "quantity": 11,
          },
          Object {
            "category": "accessories",
            "description": "Test Guttering Hook Grey",
            "externalProductCode": "4392",
            "image": "",
            "packSize": "-",
            "quantity": 15,
          },
          Object {
            "category": "accessories",
            "description": "Downpipe",
            "externalProductCode": "33332",
            "image": "",
            "packSize": "-",
            "quantity": 3,
          },
          Object {
            "category": "accessories",
            "description": "Downpipe Connector",
            "externalProductCode": "33331",
            "image": "",
            "packSize": "-",
            "quantity": 4,
          },
          Object {
            "category": "accessories",
            "description": "Clips",
            "externalProductCode": "113456781",
            "image": "",
            "packSize": "-",
            "quantity": 97,
          },
          Object {
            "category": "accessories",
            "description": "Ridge and Hip Screw",
            "externalProductCode": "113456782",
            "image": "",
            "packSize": "-",
            "quantity": 97,
          },
          Object {
            "category": "accessories",
            "description": "Long Screw",
            "externalProductCode": "113456783",
            "image": "",
            "packSize": "-",
            "quantity": 281,
          },
          Object {
            "category": "accessories",
            "description": "Screw",
            "externalProductCode": "113456784",
            "image": "",
            "packSize": "-",
            "quantity": 1312,
          },
          Object {
            "category": "accessories",
            "description": "Finishing Kit",
            "externalProductCode": "113456786",
            "image": "",
            "packSize": "-",
            "quantity": 2,
          },
          Object {
            "category": "accessories",
            "description": "Underlay Divoroll TOP RU",
            "externalProductCode": "26583450",
            "image": "",
            "packSize": "-",
            "quantity": 4,
          },
          Object {
            "category": "accessories",
            "description": "Fuglelist ventilert",
            "externalProductCode": "5555551",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 7,
          },
          Object {
            "category": "accessories",
            "description": "Other accesories example",
            "externalProductCode": "5555550",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 0,
          },
        ],
        "fixings": Array [],
        "sealing": Array [],
        "tiles": Array [
          Object {
            "category": "tiles",
            "description": "Zanda Protector main tile black",
            "externalProductCode": "46035712",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 1418,
          },
          Object {
            "category": "tiles",
            "description": "Zanda Protector half tile black",
            "externalProductCode": "46035795",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 32,
          },
          Object {
            "category": "tiles",
            "description": "Zanda_Protector_ridge tile black",
            "externalProductCode": "46035761",
            "image": "data:image/jpeg;base64,aW1hZ2UtZGF0YS4uLi4=",
            "packSize": "-",
            "quantity": 49,
          },
        ],
        "ventilation": Array [
          Object {
            "category": "ventilation",
            "description": "Ventilation Hood 1",
            "externalProductCode": "100456781",
            "image": "",
            "packSize": "-",
            "quantity": 2,
          },
        ],
      },
    },
  ],
]
`;
